# cpu-memory

./: .gitignore  CMakeLists.txt  README.md
doc/: cache_bandwidth.md  cache_line.md  memory_access.md  spatial_locality.md  temporal_locality.md
include/: buddy_memory_pool.hpp  dynamic_memory_pool.hpp  ring_buffer.hpp
src/: 0_memory_access.cpp  1_cache_bandwidth.cpp  2_cache_line.cpp  3_spatial_locality.cpp  4_temporal_locality.cpp  CMakeLists.txt  bench_cache_effects  bench_cache_effects.cpp  ring_buffer.cpp  utils.hpp
tests/: 0_memory_access.cpp  2_cache_line.cpp  3_spatial_locality.cpp  4_temporal_locality.cpp  5_page_fault.cpp  CMakeLists.txt  test_buddy_mempool.cpp  test_dynamic_mempool.cpp  test_ring_buffer.cpp
